# curseditor

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  curseditor  imgui.ini  static-build.sh
src/: main.cpp
